Fixes for nameservice valuation and udpate e2e tests
